# ndt-agent

./: .gitignore  LICENSE.txt  pyproject.toml  pytest.ini  readme.md  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
docs/: codingstyle.md  debugging.md  testing.md
src/cscanmaker/: __init__.py  cscanmaker.py  debug.py  generate_measure_data.py  generatemeasuredata.py  main.py  measure_data_to_c_scan.py
tests/: __init__.py  conftest.py
tests/unit/: test_measurement_data.py
