[project]
name = "cscanmaker"
version = "0.0.1"
authors = [
  { name="Aurash Karimi", email="aurashk11@googlemail.com" },
]
description = "A package for simulating measurment data and creating c-scans"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]